# DemoQA_Playwright

./: .gitignore  Makefile  README.md  browsertest.py  conftest.py  data.py  makefile  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
locators/: accordion_locators.py  auto_complete_locators.py  menu_locators.py  progress_bar_locators.py  select_menu_locators.py  slider_locators.py  tool_tips_locators.py
locators/alerts/: alerts_locators.py  browser_windows_locators.py  frames_locators.py  modal_locators.py  nested_frames_locators.py
locators/bookstore/: login_locators.py
locators/elements/: broken_links_locators.py  buttons_locators.py  check_box_locators.py  download_locators.py  dynamic_locators.py  links_locators.py  radio_button_locators.py  text_box_locators.py  web_tables_locators.py
locators/forms/: practice_form_locators.py
locators/interactions/: dragabble_locators.py  droppable_locators.py  resizable_locators.py  selectable_locators.py  sortable_locators.py
locators/widgets/: __init__.py  accordion_locators.py  autocomplete_locators.py  datepicker_locators.py  menu_locators.py  progress_bar_locators.py  selectmenu_locators.py  slider_locators.py  tabs_locators.py  tool_tips_locators.py  tooltips_locators.py
pages/: accordion_page.py  auto_complete_page.py  base_page.py  date_picker_page.py  menu_page.py  progress_bar_page.py  select_menu_page.py  slider_page.py  tabs_page.py  tool_tips_page.py
pages/alerts/: __init__.py  alerts_page.py  browser_windows_page.py  frames_page.py  modal_page.py  nested_frames_page.py
pages/bookstore/: login_page.py
pages/elements/: __init__.py  broken_links_page.py  buttons_page.py  check_box_page.py  download_page.py  dynamic_page.py  dynamic_properties_page.py  links_page.py  radio_button_page.py  text_box_page.py  upload_download_page.py  web_tables_page.py
pages/forms/: __init__.py  practice_form_page.py
pages/interactions/: __init__.py  dragabble_page.py  droppable_page.py  resizable_page.py  selectable_page.py  sortable_page.py
pages/widgets/: __init__.py  accordion_page.py  auto_complete_page.py  base_page.py  date_picker_page.py  menu_page.py  progress_bar_page.py  select_menu_page.py  slider_page.py  tabs_page.py  tool_tips_page.py
tests/: test_01_accordion.py  test_02_auto_complete.py  test_03_date_picker.py  test_04_slider.py  test_05_progress_bar.py  test_06_tabs.py  test_08_menu.py  test_09_select_menu.py  test_accordion.py  test_auto_complete.py  test_date_picker.py  test_menu.py  test_progress_bar.py  test_select_menu.py  test_slider.py  test_tabs.py  test_tool_tips.py
tests/alerts/: test_01_browser_windows.py  test_02_alerts.py  test_03_frames.py  test_04_nested_frames.py  test_05_modal.py
tests/bookstore/: test_login.py
tests/elements/: test_01_text_box.py  test_02_check_box.py  test_03_radio_button.py  test_04_web_tables.py  test_05_buttons.py  test_06_links.py  test_07_broken_links.py  test_08_download.py  test_09_dynamic.py  test_broken_links.py  test_buttons.py  test_check_box.py  test_links.py  test_radio_button.py  test_text_box.py  test_web_tables.py
tests/forms/: test_01_practice_form.py  test_practice_form.py
tests/helpers/: progress.py
tests/interactions/: test_01_sortable.py  test_02_selectable.py  test_03_resizable.py  test_04_droppable.py  test_05_dragabble.py
tests/widgets/: test_01_accordion.py  test_02_auto_complete.py  test_03_date_picker.py  test_04_slider.py  test_05_progress_bar.py  test_06_tabs.py  test_07_tool_tips.py  test_08_menu.py  test_09_select_menu.py
utils/: helper.py
