[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "idna>=3.10",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pytest-base-url>=2.1.0",
    "pytest-playwright>=0.7.1",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
    "text-unidecode>=1.3",
    "urllib3>=2.5.0",
]