[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.10.0",
    "autobahn>=24.4.2",
    "black==25.9.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "idna>=3.10",
    "playwright>=1.55.0",
    "playwright-stealth>=2.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-base-url>=2.1.0",
    "pytest-playwright>=0.7.1",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
    "text-unidecode>=1.3",
    "twisted-internet",
    "urllib3>=2.5.0",
]

